Worked on HeuristicLab.Collections (#819)  * removed implementation of IDisposable  * added read-only wrappers
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2618 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
+++ b/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReadOnlyObservableKeyedCollection.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ReadOnlyObservableList.cs" />
+    <Compile Include="ReadOnlyObservableDictionary.cs" />
+    <Compile Include="ReadOnlyObservableCollection.cs" />
     <Compile Include="IObservableKeyedCollection.cs" />
     <Compile Include="IObservableList.cs" />
     <Compile Include="IObservableCollection.cs" />
