Worked on HeuristicLab.Collections (#819)  * added ObservableSet  * restructured interfaces again
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2623 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
+++ b/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
@@ -48,6 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReadOnlyObservableSet.cs" />
+    <Compile Include="IObservableSet.cs" />
+    <Compile Include="ObservableSet.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ReadOnlyObservableKeyedCollection.cs">
       <SubType>Code</SubType>
     </Compile>
