--- a/sources/HeuristicLab 3.3/app.config
+++ b/sources/HeuristicLab 3.3/app.config
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HeuristicLab33.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="HeuristicLab.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
   </connectionStrings>
+  <system.serviceModel>
+  </system.serviceModel>
+  <runtime>
+    <gcServer enabled="true"/>
+  </runtime>
 
   <system.data>
     <DbProviderFactories>
@@ -21,13 +26,13 @@
     </DbProviderFactories>
   </system.data>
   <applicationSettings>
-    <HeuristicLab33.Properties.Settings>
+    <HeuristicLab.Properties.Settings>
       <setting name="User" serializeAs="String">
         <value>unknown</value>
       </setting>
       <setting name="Organization" serializeAs="String">
         <value>unknown</value>
       </setting>
-    </HeuristicLab33.Properties.Settings>
+    </HeuristicLab.Properties.Settings>
   </applicationSettings>
 </configuration>
