Committing first results of the refactoring of HeuristicLab.Core and related plugins (#95)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2656 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -53,6 +53,7 @@
     <Compile Include="FileManager.cs" />
     <Compile Include="MenuItems\CloseMenuItem.cs" />
     <Compile Include="MenuItems\CloseAllMenuItem.cs" />
+    <Compile Include="MenuItems\OperatorsMenuItem.cs" />
     <Compile Include="MenuItems\SaveAllMenuItem.cs" />
     <Compile Include="MenuItems\SaveAsMenuItem.cs" />
     <Compile Include="MenuItems\SaveMenuItem.cs" />
